--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,12 @@ dist-ssr
 *.sln
 *.sw?
 
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
 # ignore todo file
 TODO
