--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "primereact": "^10.0.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
+    "swiper": "^11.0.4",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
